--- a/examples/vanilla-app/style.css
+++ b/examples/vanilla-app/style.css
@@ -24,44 +24,28 @@ a:hover {
   color: #535bf2;
 }
 
+html,
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+#app {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
 
 button {
@@ -96,9 +80,44 @@ button:focus-visible {
   }
 }
 
-.inc,
-.dec {
-  width: 100px;
-  height: 100px;
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.scroller {
+  width: 100vw;
+  height: 100vh;
+  /* overflow-x: hidden; */
+  overflow-y: hidden;
+  padding: 0;
+}
+
+.scroller-section {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  font-size: 25rem;
+}
+
+.scroller-section.s1 {
   background-color: #535bf2;
+}
+.scroller-section.s2 {
+  background-color: #242424;
+}
+
+.scroller-section.s3 {
+  background-color: #213547;
+}
+
+.scroller-section.s4 {
+  background-color: #747bff;
 }
