--- a/examples/vanilla-app/style.css
+++ b/examples/vanilla-app/style.css
@@ -108,16 +108,16 @@ button:focus-visible {
 }
 
 .scroller-section.s1 {
-  background-color: #535bf2;
+  background-color: #ff5f45;
 }
 .scroller-section.s2 {
-  background-color: #242424;
+  background-color: #0798ec;
 }
 
 .scroller-section.s3 {
-  background-color: #213547;
+  background-color: #fc6c7c;
 }
 
 .scroller-section.s4 {
-  background-color: #747bff;
+  background-color: #fec401;
 }
