--- a/examples/vanilla-app/style.css
+++ b/examples/vanilla-app/style.css
@@ -92,7 +92,7 @@ button:focus-visible {
 .scroller {
   width: 100vw;
   height: 100vh;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
   overflow-y: hidden;
   padding: 0;
 }
