--- a/examples/vanilla-app/style.css
+++ b/examples/vanilla-app/style.css
@@ -108,16 +108,16 @@ button:focus-visible {
 }
 
 .scroller-section.s1 {
-  background-color: #ff5f45;
+  background-color: #bb6588;
 }
 .scroller-section.s2 {
-  background-color: #0798ec;
+  background-color: #8889cc;
 }
 
 .scroller-section.s3 {
-  background-color: #fc6c7c;
+  background-color: #ccaa87;
 }
 
 .scroller-section.s4 {
-  background-color: #fec401;
+  background-color: #e4a8ca;
 }
